[package]
name = "looksrare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zeroize = "1.5.7"
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen"] }
reqwest = "0.11.14"
serde_json = "1.0.91"
serde = "1.0.126"
thiserror = "1.0.26"

[dev-dependencies]
tokio = { version = "1.9.0", features = ["macros"] }